update model user
