# app/Models/User.php
@@ -10,52 +10,25 @@ use Spatie\Permission\Models\Permission;
 use Spatie\Permission\Models\Role;
 use Spatie\Permission\Traits\HasRoles;
 
-/**
- * @OA\Schema(
- *     schema="User",
- *     type="object",
- *     title="User",
- *     description="User model schema",
- *     @OA\Property(property="id", type="integer", example=1),
- *     @OA\Property(property="name", type="string", example="John Doe"),
- *     @OA\Property(property="email", type="string", format="email", example="johndoe@gmail.com"),
- *     @OA\Property(property="roles", type="array", @OA\Items(type="string", example="admin")),
- *     @OA\Property(property="permissions", type="array", @OA\Items(type="string", example="edit posts")),
- *     @OA\Property(property="created_at", type="string", format="date-time", example="2024-02-17T12:34:56Z"),
- *     @OA\Property(property="updated_at", type="string", format="date-time", example="2024-02-17T12:34:56Z")
- * )
- */
 
 class User extends Authenticatable
 {
     use HasApiTokens, HasFactory, Notifiable, HasRoles;
 
-    /**
-     * The attributes that are mass assignable.
-     *
-     * @var array<int, string>
-     */
+
     protected $fillable = [
         'name',
         'email',
         'password',
     ];
 
-    /**
-     * The attributes that should be hidden for serialization.
-     *
-     * @var array<int, string>
-     */
+
     protected $hidden = [
         'password',
         'remember_token',
     ];
 
-    /**
-     * The attributes that should be cast.
-     *
-     * @var array<string, string>
-     */
+   
     protected $casts = [
         'email_verified_at' => 'datetime',
         'password' => 'hashed',
@@ -67,7 +40,6 @@ class User extends Authenticatable
         return $this->belongsToMany(Role::class);
     }
 
-    // Foydalanuvchining ruxsatlari bilan aloqasi
     public function permissions()
     {
         return $this->belongsToMany(Permission::class);
